--- a/src/app/features/dmc-csr/dmc-csr/pages/photo-gallery/photo-gallery.component.scss
+++ b/src/app/features/dmc-csr/dmc-csr/pages/photo-gallery/photo-gallery.component.scss
@@ -498,6 +498,7 @@
       line-height: 1.4;
       display: -webkit-box;
       -webkit-line-clamp: 2;
+      line-clamp: 2;
       -webkit-box-orient: vertical;
       overflow: hidden;
     }
@@ -508,6 +509,7 @@
       margin: 0 0 0.75rem 0;
       display: -webkit-box;
       -webkit-line-clamp: 2;
+      line-clamp: 2;
       -webkit-box-orient: vertical;
       overflow: hidden;
       font-size: 0.9rem;
